fix(word-editor): inner panel not showing up
Closes #694

--- a/src/word-editor/word-editor.scss
+++ b/src/word-editor/word-editor.scss
@@ -15,10 +15,6 @@ body,
   overflow: hidden;
 }
 
-.wordEditorPanel-Background {
-  position: relative;
-}
-
 .wordEditorPanel-Container {
   width: 100% !important;
 }
